Added favourite hotels
